# ensmallen

./: .gitignore  CMakeLists.txt
CMake/: FindArmadillo.cmake
include/: ensmallen.hpp
